--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -227,6 +227,14 @@
                         </div>
                     </div>
                 </li>
+                <li style="width: 318px;padding-left: 2px">
+                    <div class="displayBox">
+                        <div class="idol" style="background:url(../../image_sp/card/xs/momoka_41.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="40">
+                        </div>
+                        <div class="idol" style="background:url(../../image_sp/card/xs/momoka_42.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="41">
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
         <ol class="icon_navi" style="position:relative;margin-bottom: -1px;margin-top: -7px;">
@@ -238,6 +246,7 @@
             <li><a>6</a></li>
             <li><a>7</a></li>
             <li><a>8</a></li>
+            <li><a>9</a></li>
         </ol>
         <div id="tab-content" style="position:relative;z-index:1">
         </div>
@@ -3950,8 +3959,180 @@ kg
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[水辺の彩花]櫻井桃華",
+                        "rarity": "5",
+                        "cost": "27",
+                        "attribute": "cute",
+                        "skill_name": "暑さを忘れて",
+                        "skill_effect": "ｷｭｰﾄ･ﾊﾟｯｼｮﾝのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻守 究極+ｱｯﾌﾟ",
+                        "grow_idol_flag": "",
+                        "default_attack": "8160",
+                        "default_defense": "8080",
+                        "hash_card_id": "328b50c0b18bdf7d9601fb0e957bd566",
+                        "alias_name": "水辺の彩花",
+                        "real_name": "櫻井桃華"
+                    },
+                    "profile": {
+                        "card_id": "1471301",
+                        "card_name": "[水辺の彩花]櫻井桃華",
+                        "card_kana": "さくらいももか",
+                        "card_age": "12",
+                        "card_from": "神戸",
+                        "card_height": "145",
+                        "card_weight": "39",
+                        "card_bust": "72",
+                        "card_waist": "53",
+                        "card_hip": "75",
+                        "card_birthday": "4月8日",
+                        "card_constellation": "牡羊座",
+                        "card_blood": "A",
+                        "card_arm": "右",
+                        "card_hobby": "ティータイム",
+                        "card_cv": "照井春佳"
+                    },
+                    "comments": {
+                        "comment": "さぁ､どうぞ｡わたくしの隣にお掛けくださいまし♪あら…遠慮なさらずとも､構いませんのよ? 今日はOOちゃまにﾘﾌﾚｯｼｭしていただくことが､何より大事なことなのですから♪",
+                        "comments_my_1": "清涼な空気に癒されましょう?",
+                        "comments_my_2": "お気に入りの水着ですのよ♪",
+                        "comments_my_3": "秘密の小旅行…ですわね♪",
+                        "comments_my_4": "遠慮などなさらずに､我が家と思って寛いでくださいまし",
+                        "comments_my_max": "お目付け役はおりません｡この場には､あなたとわたくしだけ♪",
+                        "comments_work_1": "あなたと､優雅なひと時を…♪",
+                        "comments_work_2": "お休みが､ここでのお仕事です",
+                        "comments_work_3": "桃華に､労わせてくださいませ!",
+                        "comments_work_4": "不思議…あなたがﾘﾗｯｸｽしていると､わたくしも癒されますわ",
+                        "comments_work_max": "眩しいですわね｡真夏の太陽も…OOちゃまの笑顔も",
+                        "comments_work_love_up": "OOちゃまは信に足る､と櫻井家は考えていますの♪",
+                        "comments_live": "ｽﾄﾚｯﾁは入念に! ですわ♪",
+                        "comments_love_max": "それではOOちゃま､何をいたしましょう? 談笑や泳ぎに興じるもよし｡わたくしとしたいことをお教えくださいな♪"
+                    },
+                    "voice": {
+                        "comment": "https://resource.mobamas.net/idolmaster/sound/1471301/f71446f30bfbaa77ebb8f46e471c67e8.mp4",
+                        "comments_my_1": "https://resource.mobamas.net/idolmaster/sound/1471301/c0de8633919e6daef4bd3fbe9127a4f0.mp4",
+                        "comments_my_2": "https://resource.mobamas.net/idolmaster/sound/1471301/ecd294fd4cd230cb401afad5506256a3.mp4",
+                        "comments_my_3": "https://resource.mobamas.net/idolmaster/sound/1471301/1bd9a947c6035a2be7fea9b8e14498b7.mp4",
+                        "comments_my_4": "https://resource.mobamas.net/idolmaster/sound/1471301/62008300a8259ea53bbbef8dea44b057.mp4",
+                        "comments_my_max": "https://resource.mobamas.net/idolmaster/sound/1471301/6b6aed7c4a546b8e2013841b398bb675.mp4",
+                        "comments_work_1": "https://resource.mobamas.net/idolmaster/sound/1471301/4d532ec2cdd8e23f5706196b032297af.mp4",
+                        "comments_work_2": "https://resource.mobamas.net/idolmaster/sound/1471301/ea5172e202413d77f6105a470a0b332c.mp4",
+                        "comments_work_3": "https://resource.mobamas.net/idolmaster/sound/1471301/3c97924bd9347429fc65ba058846f200.mp4",
+                        "comments_work_4": "https://resource.mobamas.net/idolmaster/sound/1471301/03e056a62e886c490ff94d5a47521c3d.mp4",
+                        "comments_work_max": "https://resource.mobamas.net/idolmaster/sound/1471301/5051e76003a56898072d94cfd12b6999.mp4",
+                        "comments_work_love_up": "https://resource.mobamas.net/idolmaster/sound/1471301/dc7cc5d702b6919ccc09c1c1575ba153.mp4",
+                        "comments_live": "https://resource.mobamas.net/idolmaster/sound/1471301/feff9e69e31118833836097328d6a8c0.mp4",
+                        "comments_love_max": "https://resource.mobamas.net/idolmaster/sound/1471301/0294414ca2fa973567622d95de23eea7.mp4"
+                    },
+                    "event": null,
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%8F%E3%82%89%E3%81%84%E3%82%82%E3%82%82%E3%81%8B",
+                    "premium_sign_idol_base_id": "15",
+                    "js_premium_sign": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/15_sign_effect",
+                    "archive": {
+                        "normal": "0",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[水辺の彩花]櫻井桃華+",
+                        "rarity": "6",
+                        "cost": "27",
+                        "attribute": "cute",
+                        "skill_name": "暑さを忘れて",
+                        "skill_effect": "ｷｭｰﾄ･ﾊﾟｯｼｮﾝのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻守 究極+ｱｯﾌﾟ",
+                        "grow_idol_flag": "",
+                        "default_attack": "9792",
+                        "default_defense": "9696",
+                        "skill_effect_2": "ｷｭｰﾄ･ﾊﾟｯｼｮﾝのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻守 小ｱｯﾌﾟ",
+                        "hash_card_id": "93277a1ae4303346a4969cf3f579e1f2",
+                        "alias_name": "水辺の彩花",
+                        "real_name": "櫻井桃華+"
+                    },
+                    "profile": {
+                        "card_id": "1571302",
+                        "card_name": "[水辺の彩花]櫻井桃華+",
+                        "card_kana": "さくらいももか",
+                        "card_age": "12",
+                        "card_from": "神戸",
+                        "card_height": "145",
+                        "card_weight": "39",
+                        "card_bust": "72",
+                        "card_waist": "53",
+                        "card_hip": "75",
+                        "card_birthday": "4月8日",
+                        "card_constellation": "牡羊座",
+                        "card_blood": "A",
+                        "card_arm": "右",
+                        "card_hobby": "ティータイム",
+                        "card_cv": "照井春佳"
+                    },
+                    "comments": {
+                        "comment": "ようこそ､女神の神殿へ｡ここは神聖な風と水が織りなす､わたくしだけの秘密の園｡ですが…あなたは特別です｡仕事に勉学にと真摯に励む､迷える旅人さま｡どうぞ心ゆくまで､お寛ぎを…♪",
+                        "comments_my_1": "清涼な空気に癒されましょう?",
+                        "comments_my_2": "お気に入りの水着ですのよ♪",
+                        "comments_my_3": "冷たくて…気持ちがいいですわ",
+                        "comments_my_4": "噴水の縁に腰を掛けるなんて…生まれて初めての体験でしてよ",
+                        "comments_my_max": "わさび茶づけちゃまにも､水飛沫で涼のお裾分けを…えいっ♪",
+                        "comments_work_1": "あなたと､優雅なひと時を…♪",
+                        "comments_work_2": "お休みが､ここでのお仕事です",
+                        "comments_work_3": "降りる時は､手をお借りしても?",
+                        "comments_work_4": "頑張る人を見守り､応援する｡それがわたくしの務めですの",
+                        "comments_work_max": "たとえ女神になろうと…櫻井桃華は､あなたのｱｲﾄﾞﾙですわ",
+                        "comments_work_love_up": "女神もｱｲﾄﾞﾙも､休息は必要ですわ｡ﾌﾟﾛﾃﾞｭｰｻｰちゃまにも…ね♪",
+                        "comments_live": "緊張していますの? ふふ♪",
+                        "comments_love_max": "神殿からひと度出れば､わたくしはただの桃華｡わさび茶づけちゃまは…それでも愛してくださると…確信しておりますの♪"
+                    },
+                    "voice": {
+                        "comment": "https://resource.mobamas.net/idolmaster/sound/1571302/7b2c7df92c4ebd80c10b1f56e94fc336.mp4",
+                        "comments_my_1": "https://resource.mobamas.net/idolmaster/sound/1571302/728cc7614dbf80e77c2a5b65594f14ac.mp4",
+                        "comments_my_2": "https://resource.mobamas.net/idolmaster/sound/1571302/8a3b5620ac17d237a6d0c88607217c45.mp4",
+                        "comments_my_3": "https://resource.mobamas.net/idolmaster/sound/1571302/9e89a6cd66467e46353c0054af6da1db.mp4",
+                        "comments_my_4": "https://resource.mobamas.net/idolmaster/sound/1571302/0a48d064242a07c6d23b36abc1b656cc.mp4",
+                        "comments_my_max": "https://resource.mobamas.net/idolmaster/sound/1571302/35c255a78c4631e44d2b1537d9a7809a.mp4",
+                        "comments_work_1": "https://resource.mobamas.net/idolmaster/sound/1571302/165d0d75af5ee0aed3bdbee971c91eca.mp4",
+                        "comments_work_2": "https://resource.mobamas.net/idolmaster/sound/1571302/ec9c9f03bd933d515526493980583d1a.mp4",
+                        "comments_work_3": "https://resource.mobamas.net/idolmaster/sound/1571302/7e9e6bfbee63a26e164eecefa258f950.mp4",
+                        "comments_work_4": "https://resource.mobamas.net/idolmaster/sound/1571302/f72fd92317a828d392eafb28ff7c1649.mp4",
+                        "comments_work_max": "https://resource.mobamas.net/idolmaster/sound/1571302/1e8e9f0c273aca1c6301d8bd6d619ae6.mp4",
+                        "comments_work_love_up": "https://resource.mobamas.net/idolmaster/sound/1571302/70975408a7e56dc34efbd01fb2c34b70.mp4",
+                        "comments_live": "https://resource.mobamas.net/idolmaster/sound/1571302/5c3454344ae7ca1b0044e05e3e6af3d7.mp4",
+                        "comments_love_max": "https://resource.mobamas.net/idolmaster/sound/1571302/5f7d8eb10dd851dc8caf0b6dff599ad8.mp4"
+                    },
+                    "event": null,
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%8F%E3%82%89%E3%81%84%E3%82%82%E3%82%82%E3%81%8B",
+                    "premium_sign_idol_base_id": "15",
+                    "js_premium_sign": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/15_sign_effect",
+                    "archive": {
+                        "normal": "0",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
                 }];
                 idol.idol_story_list = [{
+                    "story_id": "490",
+                    "story_title": "水辺の彩花",
+                    "voice_enable": ["1", "1"],
+                    "flash_path": ["../../idol_story/movie_play/490/1.html", 
+                                   "../../idol_story/movie_play/490/2.html"],
+                    "voice_url": ["../../idol_story/sound_play/490/1.html", 
+                                  "../../idol_story/sound_play/490/2.html"],
+                    "open_flag": ["1", "1"],
+                    "icon": ["../../image_sp/ui/episode/base/015.jpg", 
+                             "../../image_sp/ui/episode/epi_button_movie_490_2.jpg"],
+                    "movie_name_voice": ["../../image_sp/ui/episode/epi_button_moviename_cute_early.png", 
+                                         "../../image_sp/ui/episode/epi_button_moviename_cute_late.png"]
+                }, {
                     "story_id": "469",
                     "story_title": "聖き街の灯",
                     "voice_enable": ["1", "1"],
@@ -4199,7 +4380,9 @@ kg
                           "../../image_sp/card_sign_b/l/momoka_37.jpg", 
                           "../../image_sp/card_sign_b/l/momoka_38.jpg", 
                           "../../image_sp/card_sign_b/l/momoka_39.jpg", 
-                          "../../image_sp/card_sign_b/l/momoka_40.jpg"],
+                          "../../image_sp/card_sign_b/l/momoka_40.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_41.jpg", 
+                          "../../image_sp/card_sign_b/l/momoka_42.jpg"],
                     "l_premium": {
                         "4": "../../image_sp/card_sign_p/l/momoka_05.jpg",
                         "5": "../../image_sp/card_sign_p/l/momoka_06.jpg",
@@ -4234,7 +4417,9 @@ kg
                         "36": "../../image_sp/card_sign_p/l/momoka_37.jpg",
                         "37": "../../image_sp/card_sign_p/l/momoka_38.jpg",
                         "38": "../../image_sp/card_sign_p/l/momoka_39.jpg",
-                        "39": "../../image_sp/card_sign_p/l/momoka_40.jpg"
+                        "39": "../../image_sp/card_sign_p/l/momoka_40.jpg",
+                        "40": "../../image_sp/card_sign_p/l/momoka_41.jpg",
+                        "41": "../../image_sp/card_sign_p/l/momoka_42.jpg"
                     },
                     "l_nosign": ["", 
                                  "", 
@@ -4275,7 +4460,9 @@ kg
                                  "../../image_sp/card/l/momoka_37.jpg", 
                                  "../../image_sp/card/l/momoka_38.jpg", 
                                  "../../image_sp/card/l/momoka_39.jpg", 
-                                 "../../image_sp/card/l/momoka_40.jpg"],
+                                 "../../image_sp/card/l/momoka_40.jpg", 
+                                 "../../image_sp/card/l/momoka_41.jpg", 
+                                 "../../image_sp/card/l/momoka_42.jpg"],
                     "l_nosign_p": {
                         "4": "../../image_sp/card_sign_no_p/l/momoka_05.jpg",
                         "5": "../../image_sp/card_sign_no_p/l/momoka_06.jpg",
@@ -4310,7 +4497,9 @@ kg
                         "36": "../../image_sp/card_sign_no_p/l/momoka_37.jpg",
                         "37": "../../image_sp/card_sign_no_p/l/momoka_38.jpg",
                         "38": "../../image_sp/card_sign_no_p/l/momoka_39.jpg",
-                        "39": "../../image_sp/card_sign_no_p/l/momoka_40.jpg"
+                        "39": "../../image_sp/card_sign_no_p/l/momoka_40.jpg",
+                        "40": "../../image_sp/card_sign_no_p/l/momoka_41.jpg",
+                        "41": "../../image_sp/card_sign_no_p/l/momoka_42.jpg"
                     },
                     "l_noframe": [null, 
                                   null, 
@@ -4351,9 +4540,11 @@ kg
                                   "../../image_sp/card/l_noframe/momoka_37.jpg", 
                                   "../../image_sp/card/l_noframe/momoka_38.jpg", 
                                   "../../image_sp/card/l_noframe/momoka_39.jpg", 
-                                  "../../image_sp/card/l_noframe/momoka_40.jpg"],
-                    "mask_l": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""],
-                    "mask_l2": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""],
+                                  "../../image_sp/card/l_noframe/momoka_40.jpg", 
+                                  "../../image_sp/card/l_noframe/momoka_41.jpg", 
+                                  "../../image_sp/card/l_noframe/momoka_42.jpg"],
+                    "mask_l": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""],
+                    "mask_l2": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""],
                     "mask_l_p": [],
                     "mask_l2_p": [],
                     "xs": ["../../image_sp/card/xs/momoka_01.jpg", 
@@ -4395,7 +4586,9 @@ kg
                            "../../image_sp/card/xs/momoka_37.jpg", 
                            "../../image_sp/card/xs/momoka_38.jpg", 
                            "../../image_sp/card/xs/momoka_39.jpg", 
-                           "../../image_sp/card/xs/momoka_40.jpg"],
+                           "../../image_sp/card/xs/momoka_40.jpg", 
+                           "../../image_sp/card/xs/momoka_41.jpg", 
+                           "../../image_sp/card/xs/momoka_42.jpg"],
                     "m2": ["http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/m2/1cefdef7df7c14eca803910b67e61dfc.jpg", 
                            "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/m2/fe2f3ecbf682014be99d3f94512a48bd.jpg", 
                            "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/m2/2b676cf6e1bd042f04a6e8367ac47fdd.jpg", 
