--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -4009,20 +4009,20 @@ kg
                         "comments_love_max": "それではOOちゃま､何をいたしましょう? 談笑や泳ぎに興じるもよし｡わたくしとしたいことをお教えくださいな♪"
                     },
                     "voice": {
-                        "comment": "https://resource.mobamas.net/idolmaster/sound/1471301/f71446f30bfbaa77ebb8f46e471c67e8.mp4",
-                        "comments_my_1": "https://resource.mobamas.net/idolmaster/sound/1471301/c0de8633919e6daef4bd3fbe9127a4f0.mp4",
-                        "comments_my_2": "https://resource.mobamas.net/idolmaster/sound/1471301/ecd294fd4cd230cb401afad5506256a3.mp4",
-                        "comments_my_3": "https://resource.mobamas.net/idolmaster/sound/1471301/1bd9a947c6035a2be7fea9b8e14498b7.mp4",
-                        "comments_my_4": "https://resource.mobamas.net/idolmaster/sound/1471301/62008300a8259ea53bbbef8dea44b057.mp4",
-                        "comments_my_max": "https://resource.mobamas.net/idolmaster/sound/1471301/6b6aed7c4a546b8e2013841b398bb675.mp4",
-                        "comments_work_1": "https://resource.mobamas.net/idolmaster/sound/1471301/4d532ec2cdd8e23f5706196b032297af.mp4",
-                        "comments_work_2": "https://resource.mobamas.net/idolmaster/sound/1471301/ea5172e202413d77f6105a470a0b332c.mp4",
-                        "comments_work_3": "https://resource.mobamas.net/idolmaster/sound/1471301/3c97924bd9347429fc65ba058846f200.mp4",
-                        "comments_work_4": "https://resource.mobamas.net/idolmaster/sound/1471301/03e056a62e886c490ff94d5a47521c3d.mp4",
-                        "comments_work_max": "https://resource.mobamas.net/idolmaster/sound/1471301/5051e76003a56898072d94cfd12b6999.mp4",
-                        "comments_work_love_up": "https://resource.mobamas.net/idolmaster/sound/1471301/dc7cc5d702b6919ccc09c1c1575ba153.mp4",
-                        "comments_live": "https://resource.mobamas.net/idolmaster/sound/1471301/feff9e69e31118833836097328d6a8c0.mp4",
-                        "comments_love_max": "https://resource.mobamas.net/idolmaster/sound/1471301/0294414ca2fa973567622d95de23eea7.mp4"
+                        "comment": "../../sound/1471301/idolcomment.mp3",
+                        "comments_my_1": "../../sound/1471301/my_1.mp3",
+                        "comments_my_2": "../../sound/1471301/my_2.mp3",
+                        "comments_my_3": "../../sound/1471301/my_3.mp3",
+                        "comments_my_4": "../../sound/1471301/my_4.mp3",
+                        "comments_my_max": "../../sound/1471301/my_max.mp3",
+                        "comments_work_1": "../../sound/1471301/work_1.mp3",
+                        "comments_work_2": "../../sound/1471301/work_2.mp3",
+                        "comments_work_3": "../../sound/1471301/work_3.mp3",
+                        "comments_work_4": "../../sound/1471301/work_4.mp3",
+                        "comments_work_max": "../../sound/1471301/work_max.mp3",
+                        "comments_work_love_up": "../../sound/1471301/work_love_up.mp3",
+                        "comments_live": "../../sound/1471301/live.mp3",
+                        "comments_love_max": "../../sound/1471301/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -4089,20 +4089,20 @@ kg
                         "comments_love_max": "神殿からひと度出れば､わたくしはただの桃華｡わさび茶づけちゃまは…それでも愛してくださると…確信しておりますの♪"
                     },
                     "voice": {
-                        "comment": "https://resource.mobamas.net/idolmaster/sound/1571302/7b2c7df92c4ebd80c10b1f56e94fc336.mp4",
-                        "comments_my_1": "https://resource.mobamas.net/idolmaster/sound/1571302/728cc7614dbf80e77c2a5b65594f14ac.mp4",
-                        "comments_my_2": "https://resource.mobamas.net/idolmaster/sound/1571302/8a3b5620ac17d237a6d0c88607217c45.mp4",
-                        "comments_my_3": "https://resource.mobamas.net/idolmaster/sound/1571302/9e89a6cd66467e46353c0054af6da1db.mp4",
-                        "comments_my_4": "https://resource.mobamas.net/idolmaster/sound/1571302/0a48d064242a07c6d23b36abc1b656cc.mp4",
-                        "comments_my_max": "https://resource.mobamas.net/idolmaster/sound/1571302/35c255a78c4631e44d2b1537d9a7809a.mp4",
-                        "comments_work_1": "https://resource.mobamas.net/idolmaster/sound/1571302/165d0d75af5ee0aed3bdbee971c91eca.mp4",
-                        "comments_work_2": "https://resource.mobamas.net/idolmaster/sound/1571302/ec9c9f03bd933d515526493980583d1a.mp4",
-                        "comments_work_3": "https://resource.mobamas.net/idolmaster/sound/1571302/7e9e6bfbee63a26e164eecefa258f950.mp4",
-                        "comments_work_4": "https://resource.mobamas.net/idolmaster/sound/1571302/f72fd92317a828d392eafb28ff7c1649.mp4",
-                        "comments_work_max": "https://resource.mobamas.net/idolmaster/sound/1571302/1e8e9f0c273aca1c6301d8bd6d619ae6.mp4",
-                        "comments_work_love_up": "https://resource.mobamas.net/idolmaster/sound/1571302/70975408a7e56dc34efbd01fb2c34b70.mp4",
-                        "comments_live": "https://resource.mobamas.net/idolmaster/sound/1571302/5c3454344ae7ca1b0044e05e3e6af3d7.mp4",
-                        "comments_love_max": "https://resource.mobamas.net/idolmaster/sound/1571302/5f7d8eb10dd851dc8caf0b6dff599ad8.mp4"
+                        "comment": "../../sound/1571302/idolcomment.mp3",
+                        "comments_my_1": "../../sound/1571302/my_1.mp3",
+                        "comments_my_2": "../../sound/1571302/my_2.mp3",
+                        "comments_my_3": "../../sound/1571302/my_3.mp3",
+                        "comments_my_4": "../../sound/1571302/my_4.mp3",
+                        "comments_my_max": "../../sound/1571302/my_max.mp3",
+                        "comments_work_1": "../../sound/1571302/work_1.mp3",
+                        "comments_work_2": "../../sound/1571302/work_2.mp3",
+                        "comments_work_3": "../../sound/1571302/work_3.mp3",
+                        "comments_work_4": "../../sound/1571302/work_4.mp3",
+                        "comments_work_max": "../../sound/1571302/work_max.mp3",
+                        "comments_work_love_up": "../../sound/1571302/work_love_up.mp3",
+                        "comments_live": "../../sound/1571302/live.mp3",
+                        "comments_love_max": "../../sound/1571302/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
