--- a/idol_story/movie_play/490/1.html
+++ b/idol_story/movie_play/490/1.html
@@ -107,13 +107,13 @@
         window.file_name = "story_generator_n1"; // createjs の本体ファイルを定義
         window.dir_name = "../../../image_sp/cjs/genechara/";
         window.voice_manifest = {
-            'scene1': '../../../sound/9901105/scene1.mp3',
-            'scene2': '../../../sound/9901105/scene2.mp3',
-            'scene3': '../../../sound/9901105/scene3.mp3',
-            'scene4': '../../../sound/9901105/scene4.mp3',
-            'scene5': '../../../sound/9901105/scene5.mp3',
-            'scene6': '../../../sound/9901105/scene6.mp3',
-            'scene7': '../../../sound/9901105/scene7.mp3',
+            'scene1': '../../../sound/9901163/scene1.mp3',
+            'scene2': '../../../sound/9901163/scene2.mp3',
+            'scene3': '../../../sound/9901163/scene3.mp3',
+            'scene4': '../../../sound/9901163/scene4.mp3',
+            'scene5': '../../../sound/9901163/scene5.mp3',
+            'scene6': '../../../sound/9901163/scene6.mp3',
+            'scene7': '../../../sound/9901163/scene7.mp3',
         };
         window._wrap_flag = 0;
         window._ua = window.navigator.userAgent;
@@ -125,47 +125,65 @@
         window.im_cjs = {
             "scene_list": [{
                 "id": "1",
-                "story_id": "20548",
+                "story_id": "20574",
                 "character_id": "10115",
                 "cname": "",
                 "height_diff": "",
-                "face": "7",
+                "face": "8",
                 "position": "C",
-                "movement": "in_R",
+                "movement": "in_L",
                 "chara_effect": "",
                 "effect_direction": "",
                 "a_fade": "",
                 "": "",
                 "bgimg": "00001",
-                "message": "ごきげんよう､ﾌﾟﾛﾃﾞｭｰｻｰちゃま｡\n街もすっかりｸﾘｽﾏｽの装いです\nわね｡賑やかで､きらびやかで…\n…心が躍りますわ♪",
+                "message": "ﾌﾟﾛﾃﾞｭｰｻｰちゃま! おかえりな\nさいまし! まぁ､そんなに汗を\n掻いて……! 外は暑かったでし\nょう? 少し休みましょうか｡",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
             }, {
                 "id": "2",
-                "story_id": "20548",
+                "story_id": "20574",
                 "character_id": "10115",
                 "cname": "",
                 "height_diff": "",
-                "face": "6",
+                "face": "7",
                 "position": "C",
-                "movement": "nod",
+                "movement": "question_left",
                 "chara_effect": "",
                 "effect_direction": "",
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "ｸﾘｽﾏｽといえば､初めてのお仕事\nを思い出しますわね｡今度のお\n仕事でも､洗練された佇まいを\nお見せしますわ｡",
+                "message": "……わたくしですか? 本日は\n事務所でみなさんと夏休みの\n宿題を……って､わたくしの\nことはよろしいのですわ!",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
             }, {
                 "id": "3",
-                "story_id": "20548",
+                "story_id": "20574",
                 "character_id": "10115",
                 "cname": "",
                 "height_diff": "",
                 "face": "1",
+                "position": "C",
+                "movement": "jump",
+                "chara_effect": "",
+                "effect_direction": "",
+                "a_fade": "",
+                "": "",
+                "bgimg": "",
+                "message": "ﾌﾟﾛﾃﾞｭｰｻｰちゃまをお待ち\nしておりましたの! あなた､\n今日が何月何日かご存じ? \nそう! お盆ですのよ!?",
+                "timing": "",
+                "auto": "1",
+                "sound_effect": ""
+            }, {
+                "id": "4",
+                "story_id": "20574",
+                "character_id": "10115",
+                "cname": "",
+                "height_diff": "",
+                "face": "3",
                 "position": "C",
                 "movement": "question_left2",
                 "chara_effect": "",
@@ -173,35 +191,35 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "どんな場所でも､初めてのｼﾁｭｴｰ\nｼｮﾝであっても……落ち着いた\n立ち居振る舞いを見せるのが､ﾚ\nﾃﾞｨの嗜みですもの｡",
-                "timing": "",
-                "auto": "1",
-                "sound_effect": ""
-            }, {
-                "id": "4",
-                "story_id": "20548",
-                "character_id": "10115",
-                "cname": "",
-                "height_diff": "",
-                "face": "3",
-                "position": "C",
-                "movement": "nod_double",
-                "chara_effect": "",
-                "effect_direction": "",
-                "a_fade": "",
-                "": "",
-                "bgimg": "",
-                "message": "だから､ではございませんが…\n…ぜひ歩いてみたい通りがあり\nますの｡ｸﾘｽﾏｽの雰囲気を､実際\nに味わうのも大切ですわ｡",
+                "message": "常に多忙なわたくしの父とて､\nお盆にはお休みを取っており\nますのよ? ﾌﾟﾛﾃﾞｭｰｻｰちゃまも､\nご自愛くださいまし!",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
             }, {
                 "id": "5",
-                "story_id": "20548",
+                "story_id": "20574",
                 "character_id": "10115",
                 "cname": "",
                 "height_diff": "",
                 "face": "4",
+                "position": "C",
+                "movement": "nod2",
+                "chara_effect": "",
+                "effect_direction": "",
+                "a_fade": "",
+                "": "",
+                "bgimg": "",
+                "message": "もちろん､わたくしのためにと､\nいつもお忙しくされていること\nは嬉しいですわ｡けれど､無理は\nしてほしくありません｡",
+                "timing": "",
+                "auto": "1",
+                "sound_effect": ""
+            }, {
+                "id": "6",
+                "story_id": "20574",
+                "character_id": "10115",
+                "cname": "",
+                "height_diff": "",
+                "face": "5",
                 "position": "C",
                 "movement": "swing",
                 "chara_effect": "",
@@ -209,43 +227,25 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "なので､その……ﾌﾟﾛﾃﾞｭｰｻｰちゃ\nま｡もしもご予定が空いてまし\nたら……わたくしとご一緒に…\n…な､なんて……｡",
-                "timing": "",
-                "auto": "1",
-                "sound_effect": ""
-            }, {
-                "id": "6",
-                "story_id": "20548",
-                "character_id": "10115",
-                "cname": "",
-                "height_diff": "",
-                "face": "5",
-                "position": "C",
-                "movement": "jump",
-                "chara_effect": "flower_red",
-                "effect_direction": "",
-                "a_fade": "",
-                "": "",
-                "bgimg": "",
-                "message": "まぁ♪よろしいんですの? ﾌﾟﾛﾃ\nﾞｭｰｻｰちゃまは､お忙しい方です\nのに……もしや､わたくしのた\nめに空けてくださって……?",
+                "message": "それに……せっかくわたくし\nがお休みなのに､ﾌﾟﾛﾃﾞｭｰｻｰ\nちゃまがお仕事では……\n少々寂しくもありますのよ?",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
             }, {
                 "id": "7",
-                "story_id": "20548",
+                "story_id": "20574",
                 "character_id": "10115",
                 "cname": "",
                 "height_diff": "",
-                "face": "8",
+                "face": "1",
                 "position": "C",
-                "movement": "question_left2",
+                "movement": "pop",
                 "chara_effect": "chord",
-                "effect_direction": "L",
+                "effect_direction": "",
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "……ふふ♪せっかくの聖なる夜\nですもの｡わたくしが傍にいて\nあげますわ! ……なんて､このｾ\nﾘﾌも2度目､ですわね♪",
+                "message": "ですので……決めましたの! \nﾌﾟﾛﾃﾞｭｰｻｰちゃまには強制的\nに休んでいただきますわ! も\nちろん､わたくしと一緒に♪",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
@@ -261,7 +261,7 @@
                 }
             },
             "bg_list": ["00001"],
-            "effect_list": ["flower_red", "chord", "question"],
+            "effect_list": ["chord", "question"],
             "character_list": {
                 "10115": {
                     "id": 1,
@@ -294,13 +294,13 @@
         }
         // 必要なキャラ画像を追加
         window.chara_replace_images['c1_face1'] = '../../../image_sp/cjs/chara/other/10115.png';
+        window.chara_replace_images['c1_face8'] = '../../../image_sp/cjs/chara/other/10115_8.png';
         window.chara_replace_images['c1_face7'] = '../../../image_sp/cjs/chara/other/10115_7.png';
-        window.chara_replace_images['c1_face6'] = '../../../image_sp/cjs/chara/other/10115_6.png';
         window.chara_replace_images['c1_face1'] = '../../../image_sp/cjs/chara/other/10115.png';
         window.chara_replace_images['c1_face3'] = '../../../image_sp/cjs/chara/other/10115_3.png';
         window.chara_replace_images['c1_face4'] = '../../../image_sp/cjs/chara/other/10115_4.png';
         window.chara_replace_images['c1_face5'] = '../../../image_sp/cjs/chara/other/10115_5.png';
-        window.chara_replace_images['c1_face8'] = '../../../image_sp/cjs/chara/other/10115_8.png';
+        window.chara_replace_images['c1_face1'] = '../../../image_sp/cjs/chara/other/10115.png';
         window.chara_replace_images['c1_b'] = '../../../image_sp/cjs/chara/other/10115_b.png';
         window.im_cjs.bg_frame_info = {
             '00001': 0,
@@ -318,9 +318,8 @@
         window.bg_replace_images['bg10'] = '_nobg';
         window.op_bg_replace_images = {};
         window.im_cjs.effect_frame_info = {
-            'flower_red': 0,
-            'chord': 1,
-            'question': 2,
+            'chord': 0,
+            'question': 1,
         };
         window.im_cjs.chara_frame_info = {
             "10115": {
@@ -330,14 +329,16 @@
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
-                "face": ["1", "7", "6", "1", "3", "4", "5", "8"]
+                "face": ["1", "8", "7", "1", "3", "4", "5", "1"]
             }
         };
         window.im_cjs.title_name = '事務所' || 'no_title';
         window.im_cjs.event_type = '3' || 0;
-        window.im_cjs.jump_url = '../../../idol_gallery/idol_detail/momoka.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
+        window.im_cjs.jump_url = '../../../idol_gallery/idol_detail/momoka.html';
+        // createjsの演出が全て終了した場合の飛び先urlの定義
         window.im_cjs.chara_num = 1;
-        window.im_cjs.voice_flag = 1; // 音声再生フラグを定義
+        window.im_cjs.voice_flag = 1;
+        // 音声再生フラグを定義
     </script>
     <script>
         (function() {
@@ -358,7 +359,7 @@
                 var comp = AdobeAn.getComposition(window.file_name);
                 lib = comp.getLibrary();
                 var comp_eff_supporter = [];
-                var effect_list = ["flower_red", "chord", "question"];
+                var effect_list = ["chord", "question"];
                 for (var n = 0, len = _effect_cnt; n < len; n++) {
                     comp_eff_supporter[n] = AdobeAn.getComposition('eff_' + effect_list[n]);
                     if (comp_eff_supporter[n]) {
@@ -397,14 +398,6 @@
                     });
                     loader.addEventListener("complete", function(evt) {
                         handleComplete(evt, comp_eff_supporter[2])
-                    });
-                }
-                if (comp_eff_supporter[3]) {
-                    loader.addEventListener("fileload", function(evt) {
-                        handleFileLoad(evt, comp_eff_supporter[3])
-                    });
-                    loader.addEventListener("complete", function(evt) {
-                        handleComplete(evt, comp_eff_supporter[3])
                     });
                 }
                 var new_manifest = [];
